<resources>
    <string name="app_name">FindMyCat</string>
    <string name="progress_color">#4CA59D</string>
    <string name="background_progress_color">#E7E7E9</string>
    <string name="color_time_out">#d65920</string>
    <string name="plseEnterYourname">กรุณากรอกชื่อของคุณ</string>
    <string name="plseEnterYournameHint">กรุณากรอกชื่อของคุณ (อย่าตั้งชื่อยาว)</string>
    <string name="howtoplay">วิธีการเล่น</string>
    <string name="texthowtoplay">1.Find My Cat เป็นเกมสำหรับค้นหาน้องแมว!!! \n\n  2. เมื่อผู้เล่นเริ่มเกม จะมีเวลาให้ด่านละ 10วินาที เเละ 100 คะแนน  \n\n3. 1 วินาทีมีค่าเท่ากับ 10 คะแนน ดังนั้นคะแนนจะลดลงตามเวลา  \n\n4. เมื่อผู้เล่นผ่านด่าน คะเเนนจะเก็บสะสมตั้งเเต่ด่านเเรกจนถึงปัจจุบัน\n\n5.ไปเล่นกันเลยยย</string>
    <string name="level">Level: </string>
    <string name="score">Score: </string>
    <string name="time">Time:</string>
    <string name="highscore">คะแนนสูงสุด</string>
    <string name="plschooseruser">กรุณาเลือกผู้เล่น</string>
    <string name="delete">ลบผู้เล่น</string>
    <string name="warn">ท่านต้องการจะลบข้อมูลผู้เล่นใช่หรือไม่ ?</string>
    <string name="cancel">ยกเลิก</string>
    <string name="submit">ตกลง</string>
    <string name="facebook_app_id">1776540265692506</string>
    <string name="your_score">คะแนนของคุณ</string>
    <string name="score_thai">คะแนน</string>
    <string name="shared_score">แชร์ให้เพื่อน ๆ ได้เห็นคะแนนของคุณกันเลย !!</string>
    <string name="shared">แชร์</string>
    <string name="error">อุ้ย ! มีข้อผิดพลาด</string>
    <string name="offline_mode">คะแนนของคุณจะไม่ได้รับการเผยแพร่ ต้องการดำเนินการต่อหรือไม่</string>
    <string name="check_internet">ตรวจสอบการเชื่อมต่อ Internet</string>
    <string name="check_name">กรุณาใส่ชื่อผู้เล่น</string>
    <string name="kong">อย่าโกง</string>
</resources>
